changed page titles

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
           <title>Home Page</title>
           <link rel="stylesheet" href="index.css">
           <link rel="stylesheet" href="nav-bar.css">
-          <link rel="icon" type="image/x-icon" href="ArmadaLogo.jpg">
+          <link rel="icon" type="image/x-icon" href="images/ArmadaLogo.jpg">
      </head>
      <body>
           <div class="content">
