--- a/join.html
+++ b/join.html
@@ -3,7 +3,7 @@
      <head>
           <meta charset="utf-8">
           <meta name="viewport" content="width=device-width, initial-scale=1" /> 
-          <title>Home Page</title>
+          <title>Join</title>
           <link rel="stylesheet" href="join.css">
           <link rel="stylesheet" href="nav-bar.css">
           <link rel="icon" type="image/x-icon" href="images/ArmadaLogo.jpg">
@@ -29,6 +29,7 @@
                <p>We can't wait!</p>
                <br>
                <p>If you're a current student: Join our club in <a href="#">anchor link</a></p>
+               <br>
                <p>Otherwise: Please reach out to our <a href="#">email</a></p>
           </div>
           
