--- a/donate.html
+++ b/donate.html
@@ -3,7 +3,7 @@
      <head>
           <meta charset="utf-8">
           <meta name="viewport" content="width=device-width, initial-scale=1" /> 
-          <title>Home Page</title>
+          <title>Donate</title>
           <link rel="stylesheet" href="donate.css">
           <link rel="stylesheet" href="nav-bar.css">
           <link rel="icon" type="image/x-icon" href="images/ArmadaLogo.jpg">
