media page update

--- a/join.html
+++ b/join.html
@@ -28,9 +28,10 @@
                <br><br>
                <p>We can't wait!</p>
                <br>
-               <p>If you're a current student: Join our club in <a href="#">anchor link</a></p>
+               <p>If you're a current student: Join our club in <a href="https://anchorlink.vanderbilt.edu/organization/armadaultimate" target="_blank">anchor link</a></p>
                <br>
-               <p>Otherwise: Please reach out to our <a href="#">email</a></p>
+               <p>Otherwise: Please reach out to our <a href="mailto:vanderbiltultimate@gmail.com" target="_blank">email</a></p>
+               <p>vanderbiltultimate@gmail.com</p>
           </div>
           
           </div>
