--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
      <head>
           <meta charset="utf-8">
           <meta name="viewport" content="width=device-width, initial-scale=1" /> 
-          <title>Home Page</title>
+          <title>Home</title>
           <link rel="stylesheet" href="index.css">
           <link rel="stylesheet" href="nav-bar.css">
           <link rel="icon" type="image/x-icon" href="images/ArmadaLogo.jpg">
@@ -24,7 +24,7 @@
                </nav>
                 <div id="text-content">
                     <h1>Armada Ultimate</h1>
-                    <h2>Vanderiblt Mens Ultimate Frisbee</h2>
+                    <h2>Vanderbilt Mens Ultimate Frisbee</h2>
                   </div>
                
               
