socials, donate, and join edited

--- a/team.html
+++ b/team.html
@@ -6,6 +6,7 @@
           <title>Team</title>
           <link rel="stylesheet" href="team.css">
           <link rel="stylesheet" href="nav-bar.css">
+          <link rel="stylesheet" href="social.css">
           <link rel="icon" type="image/x-icon" href="images/ArmadaLogo.jpg">
      </head>
      <body>
@@ -27,6 +28,7 @@
                <p>Armada is Vanderbilt's competitive, traveling men's club ultimate frisbee team. We practice 2-3 times per week year-round and have 3-5 tournament weekends per semester. We are open to all experience/skill levels - most of us began playing in college! As an organization, we pride ourselves on our team's cohesive culture. We try to give as many players chances to play in tournaments as possible. In the spring, we compete in the more competitive and sanctioned tournaments. All club members remain an integral part of the team and are encouraged to come to as many practices as they can!</p>
           </div>
           <div class="section">
+               
                <h1>2024 Roster</h1>
                <p>
                     George Gunter<br>
@@ -56,6 +58,8 @@
                     Julian Rosenberg<br>
                     Andres Becerra<br>
                     Joseph Bahk<br>
+                    <br>
+                    * denotes captain
                </p>
           </div>
           <div class="section">
@@ -83,12 +87,14 @@
                     Timothy Jacob<br>
                     Will Wildridge<br>
                     Zach Shapiro<br>
+                    <br>
+                    * denotes captain
                </p>
           </div>
           <div class="section">
                <h1>2022 Roster</h1>
                <p>
-                    Avi Ghitterman<br>
+                    Avi Ghitterman*<br>
                     Ben Walton<br>
                     Caleb Boyer<br>
                     Collin Dabbieri<br>
@@ -99,7 +105,7 @@
                     Nate Eshleman<br>
                     Jack Walton<br>
                     William Wildridge<br>
-                    Uzair Khan<br>
+                    Uzair Khan*<br>
                     David McFarlane<br>
                     Ethan Jones<br>
                     Jordan Hill<br>
@@ -107,9 +113,16 @@
                     Xueyuan Jia<br>
                     Elijah Sheridan<br>
                     Andrew Doughan<br>
+                    <br>
+                    * denotes captain
                </p>
           </div>
           <br>
-           
+          <div class="socials">
+               <a href="https://www.youtube.com/@vanderbiltultimate4385" target="_blank"><img src="/images/youtubewhite.png"></a>
+               <a href="https://www.instagram.com/vuarmada/" target="_blank"><img src="/images/instagramwhite.png"></a>
+               <a href="https://x.com/VUArmada" target="_blank"><img src="/images/twitterwhite.png"></a>
+               <a href="https://anchorlink.vanderbilt.edu/organization/armadaultimate" target="_blank"><img src="/images/anchorwhite.png"></a>
+          </div>
      </body>
 </html>
