media and seo changes

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
           </div>
           
           <div class="socials">
-               <a href="https://www.youtube.com/@vanderbiltultimate4385" target="_blank"><img src="/images/youtubewhite.png"></a>
-               <a href="https://www.instagram.com/vuarmada/" target="_blank"><img src="/images/instagramwhite.png"></a>
-               <a href="https://x.com/VUArmada" target="_blank"><img src="/images/twitterwhite.png"></a>
-               <a href="https://anchorlink.vanderbilt.edu/organization/armadaultimate" target="_blank"><img src="/images/anchorwhite.png"></a>
+               <a href="https://www.youtube.com/@vanderbiltultimate4385" target="_blank"><img src="/images/youtubewhite.png" alt="Vanderbilt Ultimate Youtube"></a>
+               <a href="https://www.instagram.com/vuarmada/" target="_blank"><img src="/images/instagramwhite.png" alt="Vanderbilt Ultimate Instagram"></a>
+               <a href="https://x.com/VUArmada" target="_blank"><img src="/images/twitterwhite.png" alt="Vanderbilt Ultimate X"></a>
+               <a href="https://anchorlink.vanderbilt.edu/organization/armadaultimate" target="_blank"><img src="/images/anchorwhite.png" alt="Vanderbilt Ultimate Anchorlink"></a>
           </div>
      </body>
 </html>
