--- a/media.html
+++ b/media.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Media</title>
     <link rel="stylesheet" href="media.css">
-    <link rel="stylesheet" href="nav-bar.css">
-    <link rel="stylesheet" href="social.css">
-    <link rel="icon" type="image/x-icon" href="images/ArmadaLogo.jpg">
+    <link rel="stylesheet" href="/nav-bar.css">
+    <link rel="stylesheet" href="/social.css">
+    <link rel="icon" type="image/x-icon" href="/images/ArmadaLogo.jpg">
     <style>
         .hidden {
             display: none;
@@ -15,197 +15,8 @@
     </style>
 </head>
 <body>
-    <div class="content">
-        <nav>
-            <a href="index.html">
-                <img id="nav-logo" src="images/ArmadaLogo.jpg">
-            </a>
-            <a class="nav-link" href="index.html">Home</a>
-            <a class="nav-link" href="media.html">Media</a>
-            <a class="nav-link" href="team.html">Team</a>
-            <a class="nav-link" href="join.html">Join</a>
-            <a class="nav-link" href="donate.html">Donate</a>
-        </nav>
-        <div class="year">
-            <h1>2023-2024</h1>
-            <h2>Highlights</h2>
-            <h3>Coming soon...</h3>
-            <br>
-            <h2>Callahan</h2>
-            <h3>Coming soon...</h3>
-            <br>
-            <h2>Spring</h2>
-            <div class="event">
-                <button onclick="toggleVisibility(this, 'Regionals')">Show Regionals</button>
-                <div class="event-content hidden">
-                    <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/toQerANVODY?si=hW56RwJHNQ2wC4uD" 
-                                title="YouTube video player" 
-                                frameborder="0" 
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                                referrerpolicy="strict-origin-when-cross-origin" 
-                                allowfullscreen>
-                        </iframe>
-                    </div>
-                </div>
-            </div>
-            <div class="event">
-                <button onclick="toggleVisibility(this, 'Sectionals')">Show Sectionals</button>
-                <div class="event-content hidden">
-                    <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/txkOx9sq9Bw?si=C5jzG7kpqYSMhwlU" 
-                                title="YouTube video player" 
-                                frameborder="0" 
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                                referrerpolicy="strict-origin-when-cross-origin" 
-                                allowfullscreen>
-                        </iframe>
-                    </div>
-                    <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/VS8ZwFccGKw?si=QAm7GShWQBNE3dH2" 
-                                title="YouTube video player" 
-                                frameborder="0" 
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                                referrerpolicy="strict-origin-when-cross-origin" 
-                                allowfullscreen>
-                        </iframe>
-                    </div>
-                    <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/4WtVhgwBWug?si=hUjCYN-aHm_mkfwt" 
-                                title="YouTube video player" 
-                                frameborder="0" 
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                                referrerpolicy="strict-origin-when-cross-origin" 
-                                allowfullscreen>
-                        </iframe>
-                    </div>
-                    <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/iaI_p5_KnQg?si=EMnm-D-2T5W1lkyO" 
-                                title="YouTube video player" 
-                                frameborder="0" 
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                                referrerpolicy="strict-origin-when-cross-origin" 
-                                allowfullscreen>
-                        </iframe>
-                    </div>
-                </div>
-            </div>
-            <div class="event">
-                <button onclick="toggleVisibility(this, 'Huck Finn')">Show Huck Finn</button>
-                <div class="event-content hidden">
-                    
-                    <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/vaca2ZS-uAg?si=J5e9WQL08ZRZnHlr" 
-                                title="YouTube video player" 
-                                frameborder="0" 
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                                referrerpolicy="strict-origin-when-cross-origin" 
-                                allowfullscreen>
-                        </iframe>
-                    </div>
-                    <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/bZucABToxMg?si=F4fNdzO_F3_CRM4z" 
-                                title="YouTube video player" 
-                                frameborder="0" 
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                                referrerpolicy="strict-origin-when-cross-origin" 
-                                allowfullscreen>
-                        </iframe>
-                    </div>
-                    <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/pLDGUmvm5NI?si=csWI73OVU75uGIbr" 
-                                title="YouTube video player" 
-                                frameborder="0" 
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                                referrerpolicy="strict-origin-when-cross-origin" 
-                                allowfullscreen>
-                        </iframe>
-                    </div>
-                    <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/_Yn4HvJ7O5o?si=vwgu2jJcL5YqFJyj" 
-                                title="YouTube video player" 
-                                frameborder="0" 
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                                referrerpolicy="strict-origin-when-cross-origin" 
-                                allowfullscreen>
-                        </iframe>
-                    </div>
-                    <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/Fb6_dehi7dM?si=kc1SxJgq6wjFW5MC" 
-                                title="YouTube video player" 
-                                frameborder="0" 
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                                referrerpolicy="strict-origin-when-cross-origin" 
-                                allowfullscreen>
-                        </iframe>
-                    </div>
-                </div>
-            </div>
-            <h2>Fall</h2>
-            <div class="event">
-                <button onclick="toggleVisibility(this, 'Cowbell Classic')">Show Cowbell Classic</button>
-                <div class="event-content hidden">
-                    <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/aqbjh_Kocd8?si=8jUPYTLHcscTm6Ih" 
-                                title="YouTube video player" 
-                                frameborder="0" 
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                                referrerpolicy="strict-origin-when-cross-origin" 
-                                allowfullscreen>
-                        </iframe>
-                    </div>
-                    <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/DCq6xBb4Lx0?si=jBEc58pyZxZdA02Z" 
-                                title="YouTube video player" 
-                                frameborder="0" 
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                                referrerpolicy="strict-origin-when-cross-origin" 
-                                allowfullscreen>
-                        </iframe>
-                    </div>
-                    <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/LzZMhOZu0QY?si=6ponbqqAXY-SHEJs" 
-                                title="YouTube video player" 
-                                frameborder="0" 
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                                referrerpolicy="strict-origin-when-cross-origin" 
-                                allowfullscreen>
-                        </iframe>
-                    </div>
-                    <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/5m_J4CQ4MZk?si=bK_7XjI7w-NcxuMH" 
-                                title="YouTube video player" 
-                                frameborder="0" 
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                                referrerpolicy="strict-origin-when-cross-origin" 
-                                allowfullscreen>
-                        </iframe>
-                    </div>
-                </div>
-            </div>
-            
-        </div>
-        <br>
-    </div>
-
-    <div class="socials">
-        <a href="https://www.youtube.com/@vanderbiltultimate4385" target="_blank"><img src="/images/youtubewhite.png"></a>
-        <a href="https://www.instagram.com/vuarmada/" target="_blank"><img src="/images/instagramwhite.png"></a>
-        <a href="https://x.com/VUArmada" target="_blank"><img src="/images/twitterwhite.png"></a>
-        <a href="https://anchorlink.vanderbilt.edu/organization/armadaultimate" target="_blank"><img src="/images/anchorwhite.png"></a>
-   </div>
-
     <script>
-        function toggleVisibility(button, text) {
-            const eventContent = button.nextElementSibling;
-            eventContent.classList.toggle('hidden');
-
-            if (button.innerText == "Show " + text) {
-                button.innerText = "Hide " + text;
-            } else {
-                button.innerText = "Show " + text;
-            }
-        }
+        location.replace("/media/2023-2024.html")
     </script>
 </body>
 </html>
