--- a/team.html
+++ b/team.html
@@ -25,7 +25,7 @@
            </nav>
            <div class="section">
                <h1>Who are we?</h1>
-               <p>Armada is Vanderbilt's competitive, traveling men's club ultimate frisbee team. We practice 2-3 times per week year-round and have 3-5 tournament weekends per semester. We are open to all experience/skill levels - most of us began playing in college! As an organization, we pride ourselves on our team's cohesive culture. We try to give as many players chances to play in tournaments as possible. In the spring, we compete in the more competitive and sanctioned tournaments. All club members remain an integral part of the team and are encouraged to come to as many practices as they can!</p>
+               <p>Armada is Vanderbilt's Mens Ultimate Fribee team. We are a competitive, traveling team who practices 2-3 times per week year-round and have 3-5 tournament weekends per semester. We are open to all experience/skill levels - most of us began playing in college! As an organization, we pride ourselves on our team's cohesive culture. We try to give as many players chances to play in tournaments as possible. In the spring, we compete in the more competitive and sanctioned tournaments. All members of Vanderbilt Men's Ultimate remain an integral part of the team and are encouraged to come to as many practices as they can!</p>
           </div>
           <div class="section">
                
@@ -119,10 +119,10 @@
           </div>
           <br>
           <div class="socials">
-               <a href="https://www.youtube.com/@vanderbiltultimate4385" target="_blank"><img src="/images/youtubewhite.png"></a>
-               <a href="https://www.instagram.com/vuarmada/" target="_blank"><img src="/images/instagramwhite.png"></a>
-               <a href="https://x.com/VUArmada" target="_blank"><img src="/images/twitterwhite.png"></a>
-               <a href="https://anchorlink.vanderbilt.edu/organization/armadaultimate" target="_blank"><img src="/images/anchorwhite.png"></a>
+               <a href="https://www.youtube.com/@vanderbiltultimate4385" target="_blank"><img src="/images/youtubewhite.png" alt="Vanderbilt Ultimate Youtube"></a>
+               <a href="https://www.instagram.com/vuarmada/" target="_blank"><img src="/images/instagramwhite.png" alt="Vanderbilt Ultimate Instagram"></a>
+               <a href="https://x.com/VUArmada" target="_blank"><img src="/images/twitterwhite.png" alt="Vanderbilt Ultimate X"></a>
+               <a href="https://anchorlink.vanderbilt.edu/organization/armadaultimate" target="_blank"><img src="/images/anchorwhite.png" alt="Vanderbilt Ultimate Anchorlink"></a>
           </div>
      </body>
 </html>
